--- a/index.html
+++ b/index.html
@@ -1,6 +1,47 @@
-vaibhav
-ashu
-aman
-vishal
-sudhanshu
-siddhant
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chapter 3</title>
+</head>
+<body>
+    <!-- This content is header -->
+    <header>
+         <nav>
+
+         </nav>
+    </header>
+    <!-- This is main content -->
+    <main> 
+        <section>
+            <div>
+                <h1>why do you love html</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, animi.</p>
+            </div>
+            <div>
+                <h1>why do you love coding</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, doloribus cumque?</p>
+            </div>
+            <span>why to wirte in python</span>
+            <span>why to learn boots strap</span>
+            <a href="https://codewithharry.com" target="_main">Harry's Website</a>
+        </section>
+        <article>
+            <h2>is it necessary to start learning C</h2>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </article>
+        <aside>
+            <h3>why is it necessary to know all the languages?</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod, ipsam.</p>
+        </aside>
+
+    </main> 
+    <!-- This contet is footer -->
+    <footer>
+
+    </footer>
+
+</body>
+</html>
