--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
                 <h1>why do you love coding</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, doloribus cumque?</p>
             </div>
+            <div>
             <span>why to wirte in python</span>
             <span>why to learn boots strap</span>
-            <a href="https://codewithharry.com" target="_main">Harry's Website</a>
+            <a href="https://codewithharry.com" target="_main"><img src="https://static.toiimg.com/photo/msid-31346158,width-96,height-65.cms" alt="harry's website" height="83"></a>
+            </div>
         </section>
         <article>
             <h2>is it necessary to start learning C</h2>
