--- a/form.html
+++ b/form.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <h1>Enrollment for the University Programme</h1>
-        <p>NAME</p>
+        <p>Name of the candidate</p>
         <form action="form.php">
          <input type="text" placeholder="Enter your full name">
         <label for="sectionida">
