--- a/form.html
+++ b/form.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon-16x16.png" type="image/x-icon">
     <title>Addmission Form</title>
 </head>
 <body style="background-color:powderblue;">
@@ -17,10 +18,10 @@
          <input type="radio" value="Male" name="setion" id="Male"> Male
         </label>
         <label for="sectionida">
-            <input type="radio" value="Female" name="setion" id="Male"> Female
+            <input type="radio" value="Female" name="setion" id="Female"> Female
            </label>
            <label for="sectionida">
-            <input type="radio" value="Other" name="setion" id="Male"> Other
+            <input type="radio" value="Other" name="setion" id="Other"> Other
            </label>
            </form>   
     </div>
@@ -75,6 +76,11 @@
             <label for="For More Queries">For more queries</label>
             <textarea name="Explain" id="Explain" cols="30" rows="10" placeholder="For More Queries"></textarea>
         </div>
+        <address>
+            Oxford Road,Street-12.<br> 
+            The science bulding auditorium:<br>
+            www.hogwards.com<br>
+            Box 564, Disneyland<br>
 </html>
 </body>
 </html>
